Fix: Align the portfolio boxes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2444,3 +2444,7 @@ input, select, textarea {
 					}
 
 	}
+
+#portfolio .box.style2 {
+  height: 500px; /* or whatever fits your design */
+}
